feat: version 1.0.1 improving names and architecture